--- a/renderer/index.html
+++ b/renderer/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <title>Json Parser</title>
-    <style>
-      .center {
-        padding-top: 10%;
-        display: flex;
-        justify-content: center;
-      }
-    </style>
   </head>
   <body style="background-color:rgb(68, 39, 61);">
     <div class="center">
       <form id="jsonForm">
-        <textarea placeholder="your json text here" id="json-text" required></textarea><br/>
-        <select id="file-type">
-          <option>CSV</option>
-          <option>PDF</option>
-          <option>XLSX</option>
-        </select>
-        <button type="submit">convert</button>
+        <table>
+          <tr><td><textarea placeholder="your json text here" id="json-text" rows="10" cols="35" required></textarea></td></tr>
+          <tr>
+              <td style="text-align: right;">
+                <select id="file-type" style="width: 100px;">
+                <option>CSV</option>
+                <option>XLSX</option>
+                </select>
+              </td>
+          </tr>
+          <tr>
+              <td style="text-align: right;"><button type="submit" style="width: 100px;">convert</button></td>
+          </tr>
+        </table>
       </form>
     </div>
   </body>
